# PetCare

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  requirments.txt  server.js
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_test.py  docker-compose.yml  pyproject.toml  requirements.txt  reset_db.py  reset_db_full.py
backend/.github/workflows/: ci.yml
backend/docs/: ARCHITECTURE.md
backend/scripts/: README.md
backend/scripts/db/: reset_db.py  reset_db_full.py
backend/scripts/debug/: debug_test.py
backend/scripts/seed/: seed_initial_data.py
backend/src/: config.py  main.py  schemas.py  settings.py
backend/src/api/: admin.py  auth.py  bookings.py  care_logs.py  carts.py  categories.py  deps.py  notifications.py  orders.py  payments.py  pets.py  products.py  reports.py  shipping.py  storage.py  users.py
backend/src/domain/: auth_service.py  booking_service.py  care_log_service.py  order_service.py  pet_service.py  report_service.py  storage_service.py
backend/src/middleware/: error_handler.py  logging.py
backend/src/persistence/: database.py
backend/src/petcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/schemas/: __init__.py  auth.py  bookings.py  care_logs.py  carts.py  categories.py  notifications.py  orders.py  pets.py  products.py  reports.py  shipping.py  storage.py
backend/src/services/: auth_service.py  booking_service.py  care_log_service.py  cart_service.py  email_service.py  notification_service.py  (+6 more)
backend/tests/: conftest.py
(+182 files in other folders)
